# akane-lang-old

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test_on_push_or_pull_request.yml
akanec/: Cargo.toml  build.rs
akanec/src/: lib.rs  main.rs
akanec/src/codegen/: mod.rs
akanec/src/compiler/: mod.rs
akanec/src/data/: ast.rs  mod.rs  thunk.rs  token.rs
akanec/src/data/context/: mod.rs
akanec/src/data/llvm/: pool.rs
akanec/src/data/semantics/: mod.rs  qual_sem.rs  ty2_sem.rs  ty_sem.rs
akanec/src/lexer/: mod.rs  tests.rs
akanec/src/llvm/: mod.rs  pool.rs
akanec/src/parser/: mod.rs  tests.rs
akanec/src/semantizer/: mod.rs
akaneclib/: Cargo.toml
akaneclib/src/: lib.rs
akaneclib/src/codegen/: llvm.rs  mod.rs
akaneclib/src/compiler/: mod.rs
akaneclib/src/data/: ast.rs  mod.rs  thunk.rs  token.rs
akaneclib/src/data/ast/: ctor.rs  has_ref_cell.rs  mod.rs
akaneclib/src/data/context/: generic_store.rs  id_store.rs  mod.rs  qual_stack.rs  store.rs
akaneclib/src/data/llvm/: mod.rs  pool.rs
akaneclib/src/data/semantics/: fn_sem.rs  macros.rs  mod.rs  qual_sem.rs  scope_sem.rs  ty1_sem.rs  ty2_sem.rs  ty_sem.rs
akaneclib/src/data/str_info/: iter.rs  mod.rs
akaneclib/src/data/token/: ctor.rs  mod.rs  str_info.rs  str_info_iterator.rs
akaneclib/src/lexer/: mod.rs  tests.rs
akaneclib/src/macros/: mod.rs
akaneclib/src/parser/: mod.rs  tests.rs
akaneclib/src/semantizer/: mod.rs
akanectest/: Cargo.toml  build.rs
akanectest/src/tests/: ffi.rs  mod.rs
akaneruntime/: Cargo.toml  build.rs
akaneruntime/src/c/: libakaneruntime.c
(+4 files in other folders)
