[package]
name = "akanec"
version = "0.1.0"
edition = "2021"
authors = ["akanevrc <akanezoranomukou@gmail.com>"]
description = "Compiler for Akane language."

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive"] }
akaneclib = { version = "0.1.0", path = "../akaneclib" }
